# ga_engine

./: .gitignore  .zenodo.json  ARCHITECTURE.md  BATCHED_NTT_FINAL_STATUS.md  BATCHED_NTT_FIX1_GPU_CACHED_TWIDDLES.md  BATCHED_NTT_FIX3_ANALYSIS_FAILURE.md  BATCHED_NTT_FIX3_GPU_RESIDENT_LAYOUT_CONVERSION.md  BATCHED_NTT_OPTIMIZATION_COMPLETE.md  BATCHED_NTT_PERFORMANCE_ANALYSIS.md  BENCHMARKS.md  BUG_FIXED.md  CITATION.cff  CKKS_MULTIPLICATION_STATUS.md  CKKS_ROTATION_PROBLEM_DETAILED.md  CLIFFORD_FHE_COMPLETE.md  CLIFFORD_FHE_FINAL_STATUS.md  CLIFFORD_FHE_MILESTONE.md  CLIFFORD_FHE_NEW_APPROACH.md  CLIFFORD_FHE_SIMD_STATUS.md  CLIFFORD_FHE_VERSIONS.md  CLIFFORD_LWE_STATUS.md  CLIFFORD_LWE_VS_KYBER.md  CMAKE_FIX.md  COMMANDS.md  COMPLETE_OPTIMIZATION_RESULTS.md  COMPOSITE_PRIMES_FIX.md  CRITICAL_V3_GPU_KERNELS_NOT_USED.md  CUDA_CKKS_IMPLEMENTATION_SUMMARY.md  CUDA_COMPLETE_SUCCESS.md  CUDA_GAP_ANALYSIS.md  CUDA_POINTWISE_MULTIPLY_GPU_FIX.md  CUDA_RELINEARIZATION_COMPLETE.md  CUDA_RELIN_INTEGRATION_COMPLETE.md  CUDA_ROTATION_READY.md  CUDA_V3_BOOTSTRAP_READY.md  CUDA_V3_BOOTSTRAP_STATUS.md  CUDA_V3_IMPLEMENTATION_COMPLETE.md  CUDA_V3_SEQUENTIAL_BOTTLENECKS_AUDIT.md  CURRENT_BUG.md  Cargo.toml  (+84 more)
benches/: README.md  bench.rs  classical.rs  ga_variants.rs  lattice_battle.rs  matrix_matrixmultiply.rs  matrix_ndarray.rs
docs/: BENCHMARK_RESULTS.md  CRYPTO_2026_paper_outline.md  IMPLEMENTATION_PLAN.md  NVIDIA_GPU_SETUP.md  RUNPOD_SETUP.md  ckks_division_capability_research.md  homomorphic_division_research.md  performance_comparison_division.md  sanity_check_summary.md  (+1 more)
(+290 files in other folders)
