[package]
name = "ga_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "coverage_summary"
path = "src/bin/coverage_summary.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
